--- a/package.json
+++ b/package.json
@@ -18,16 +18,18 @@
   },
   "lint-staged": {
     "src/**/*": [
-      "yarn lint -- --fix",
+      "yarn lint --fix",
       "yarn test --findRelatedTests --bail"
     ]
   },
   "dependencies": {
     "eslint-plugin-react-hooks": "^4.2.0",
+    "leaflet": "^1.7.1",
     "next": "11.1.2",
     "next-pwa": "^5.4.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-leaflet": "^3.2.2",
     "styled-components": "^5.3.3",
     "webpack": "4"
   },
@@ -36,6 +38,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.2",
     "@types/jest": "^27.0.2",
+    "@types/leaflet": "^1.7.6",
     "@types/react": "^17.0.27",
     "@types/styled-components": "^5.1.15",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
