--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     ]
   },
   "dependencies": {
+    "@styled-icons/evaicons-outline": "^10.34.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "leaflet": "^1.7.1",
     "next": "11.1.2",
