--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   "dependencies": {
     "@styled-icons/evaicons-outline": "^10.34.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "graphql": "^16.1.0",
+    "graphql-request": "^3.7.0",
     "leaflet": "^1.7.1",
     "next": "11.1.2",
     "next-pwa": "^5.4.0",
